# feign-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
feign/: Cargo.toml
feign/src/: consul.rs  lib.rs  main.rs
feign_derive/: Cargo.toml
feign_derive/src/: lib.rs
feign_derive/tests/: test_macro.rs
