[package]
name = "feign"
version = "0.1.0"
authors = ["lagudomeze <lagudomeze@163.com>"]
edition = "2018"

[lib]
name = "feign"

[dependencies]
reqwest = "0.9"
crossbeam-epoch = "0.7"
failure = "0.1"
trust-dns-resolver = "0.11"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

