[package]
name = "feign_derive"
version = "0.1.0"
authors = ["lagudomeze <lagudomeze@163.com>"]
edition = "2018"

[lib]
name = "feign_derive"
proc-macro = true

[dependencies]
reqwest = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
failure = "0.1"
quote = "0.6"
proc-macro2 = "0.4"

[dependencies.syn]
version = "0.15"
features = ["full", "parsing"]

[dev-dependencies]
feign = {path = "../feign"}